--- a/Example/DAFileMonitor.xcodeproj/xcshareddata/xcschemes/DAFileMonitor-Example.xcscheme
+++ b/Example/DAFileMonitor.xcodeproj/xcshareddata/xcschemes/DAFileMonitor-Example.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0830"
+   LastUpgradeVersion = "0820"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,23 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "777344871F32979500B873A9"
-               BuildableName = "DAFileMonitor.framework"
-               BlueprintName = "DAFileMonitor"
+               BlueprintIdentifier = "607FACCF1AFB9204008FA782"
+               BuildableName = "DAFileMonitor_Example.app"
+               BlueprintName = "DAFileMonitor_Example"
+               ReferencedContainer = "container:DAFileMonitor.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "607FACE41AFB9204008FA782"
+               BuildableName = "DAFileMonitor_Tests.xctest"
+               BlueprintName = "DAFileMonitor_Tests"
                ReferencedContainer = "container:DAFileMonitor.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -28,7 +42,26 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "607FACE41AFB9204008FA782"
+               BuildableName = "DAFileMonitor_Tests.xctest"
+               BlueprintName = "DAFileMonitor_Tests"
+               ReferencedContainer = "container:DAFileMonitor.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "607FACCF1AFB9204008FA782"
+            BuildableName = "DAFileMonitor_Example.app"
+            BlueprintName = "DAFileMonitor_Example"
+            ReferencedContainer = "container:DAFileMonitor.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -42,15 +75,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "777344871F32979500B873A9"
-            BuildableName = "DAFileMonitor.framework"
-            BlueprintName = "DAFileMonitor"
+            BlueprintIdentifier = "607FACCF1AFB9204008FA782"
+            BuildableName = "DAFileMonitor_Example.app"
+            BlueprintName = "DAFileMonitor_Example"
             ReferencedContainer = "container:DAFileMonitor.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -60,15 +94,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "777344871F32979500B873A9"
-            BuildableName = "DAFileMonitor.framework"
-            BlueprintName = "DAFileMonitor"
+            BlueprintIdentifier = "607FACCF1AFB9204008FA782"
+            BuildableName = "DAFileMonitor_Example.app"
+            BlueprintName = "DAFileMonitor_Example"
             ReferencedContainer = "container:DAFileMonitor.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
